fix select text overflow and add icons (#319)
* fix: fix overflow text elips

affects: @gio-design/components

* fix: add iconns

affects: @gio-design/icons

--- a/packages/components/src/components/select/style/index.less
+++ b/packages/components/src/components/select/style/index.less
@@ -43,8 +43,11 @@
     max-width: 100%;
     margin-top: 7px;
     margin-left: 8px;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    &-text {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
   }
 
   &-small {
